MGDOBR-322: close the loop